<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Slip</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_testing1">Testing1</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_account">Account</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_notsame_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="auth_failed">Login failed</string>
    <string name="auth_success">Login success</string>
    <string name="register_failed">Registration failed</string>
    <string name="register_success">Register success</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_firstName">First name</string>
    <string name="prompt_lastName">Last name</string>
    <string name="prompt_occupation">Occupation</string>
    <string name="prompt_company">Company</string>
    <string name="action_register">Accept</string>
    <string name="action_register_short">Register</string>
    <string name="database_users">users</string>
    <string name="database_profilePicture">profile_picture.jpg</string>
    <string name="database_connections">connections</string>
    <string name="login_logo">sliplogo</string>
    <string name="login_register_prompt">No account? Create one</string>
    <string name="register_login_prompt">Have account? Sign in</string>
    <string name="login_button_text">Login</string>
    <string name="qr_scan_name">Scan</string>
    <string name="account_profile_picture">accountprofilepicture</string>
    <string name="account_name">Profile</string>
    <string name="prompt_edit">edit</string>
    <string name="account_profile_picture_edit_text">Edit</string>
    <string name="account_contact_info_title">Contact Info</string>
    <string name="prompt_phoneNumber">Phone number</string>
    <string name="account_accept_button_text">Accept</string>
    <string name="myCardTitle">My Card</string>
    <string name="collectionTitle">Collection</string>
    <string name="networkTitle">Network</string>
    <string name="search">Search</string>
    <string name="error_invalid_phoneNumber">This phone number is invalid</string>
    <string name="fragment0title">My card</string>
    <string name="fragment1title">Collection</string>
    <string name="fragment2title">Network</string>
    <string name="title_activity_search_list">SearchList</string>
    <string name="searchtarget">What\'s up?</string>
    <string name="database_user_signature">signature</string>
    <string name="profile_picture">profile_picture</string>
    <string name="picture_folder">slipPics</string>
    <string name="double_back_prompt">Double-tap BACK to exit</string>
    <string name="prompt_fullName">Full name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_connections">Connections</string>
    <string name="camera_uid">User ID</string>
    <string name="camera_add">Add user</string>
    <string name="error_database">Database error</string>
    <string name="error_invalid_uid">UID does not exist</string>
    <string name="error_add_self">You can\'t add yourself!</string>
    <string name="error_user_added">User already added</string>
    <string name="addUser_success">User added</string>
    <string name="connection_removeButton_text">Remove</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="login_error_retrievalFailure">Failed to get user info</string>
    <string name="login_error_databaseFailure">Failed to query database</string>
    <string name="login_error_nouser">LOL cannot find User, You SUCK!</string>
    <string name="image_selectImageApp">Select image source</string>
    <string name="qr_code">QR Code</string>
    <string name="cover_image">Cover image</string>
    <string name="add_friend">Add friend</string>
    <string name="show_menu">Show menu</string>
    <string name="sample_text">Sample Text</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="loading">Loading</string>
    <string name="show_connections">Connections</string>
    <string name="permission_location_rationale">Location services can help you connect with others.</string>
    <string name="location_earth">Earth</string>
    <string name="empty" />
    <string name="show_email">Email</string>
    <string name="show_mobilePhone">Mobile</string>
    <string name="earth">Earth</string>
    <string name="database_user_latitude">latitude</string>
    <string name="database_user_longitude">longitude</string>
    <string name="messageTitle">Notes</string>
    <string name="connection_collectionButton_text">See connections</string>
    <string name="space"> </string>
    <string name="message_writeButton_text">Leave note</string>
    <string name="message_writePrompt">Write a note</string>
    <string name="database_messages">messages</string>
</resources>
